# organize_downloads

./: CMakeLists.txt  Readme.md
config/: rules.json  setup.sh
include/: ConfigLoader.hpp  FileSorter.hpp  FileWatcher.hpp  Utils.hpp
src/: ConfigLoader.cpp  FileSorter.cpp  FileWatcher.cpp  Utils.cpp  main.cpp
